# reformation

./: .gitignore  .travis.yml  Cargo.toml  Changelog.md  LICENSE  README.md
benches/: kirby_user_agent.rs
examples/: derive.rs  enum_.rs  example.rs  float.rs  generics.rs
failing_examples/: Cargo.toml
reformation/: Cargo.toml
reformation/benches/: generic_overhead.rs  kirby_user_agent.rs
reformation/examples/: derive.rs  enum_.rs
reformation/src/: containers.rs  lib.rs
reformation/tests/: containers.rs  enum.rs  nested_record.txt  struct.rs
reformation_derive/: Cargo.toml
reformation_derive/src/: derive_input.rs  error_messages.rs  format.rs  impl_derive.rs  lib.rs  reformation_attribute.rs  syn_helpers.rs
reparse_proc_macro/: Cargo.toml
reparse_proc_macro/src/: lib.rs
src/: lib.rs
tests/: enum.rs  struct.rs
