[package]
name = "reformation"
version = "0.4.1"
authors = ["hukumka <hukumka212@gmail.com>"]
edition = "2018"
description = "Parsing via regular expressions"

readme = "README.md"
license = "MIT"
repository = "https://github.com/hukumka/reformation"
travis-ci = { repository = "hukumka/reformation" }
keywords = ["parsing", "regex"]
categories = ["parsing"]

[dependencies]
# pub
regex = "1"
# private
reformation_derive = {path="../reformation_derive", version="0.4.1"}
derive_more = "0.13.0"

[dev-dependencies]
criterion = "0.2.7"

[[bench]]
name = "kirby_user_agent"
harness = false
