[package]
name = "reformation"
version = "0.5.1"
authors = ["hukumka <hukumka212@gmail.com>"]
edition = "2018"
description = "Parsing via regular expressions"

readme = "../README.md"
license = "MIT"
repository = "https://github.com/hukumka/reformation"
keywords = ["parsing", "regex"]
categories = ["parsing"]

[badges]
travis-ci = { repository = "hukumka/reformation" }

[dependencies]
# pub
once_cell = "0.2"
regex = "1"
# private
reformation_derive = {path="../reformation_derive", version="0.5.1"}
derive_more = "0.13.0"

[dev-dependencies]
criterion = "0.2.7"
lazy_static = "1.1"

[[bench]]
name = "kirby_user_agent"
harness = false
