[package]
name = "reformation"
version = "0.5.2"
authors = ["hukumka <hukumka212@gmail.com>"]
edition = "2018"
description = "Parsing via regular expressions"

readme = "../README.md"
license = "MIT"
repository = "https://github.com/hukumka/reformation"
keywords = ["parsing", "regex"]
categories = ["parsing"]

[badges]
travis-ci = { repository = "hukumka/reformation" }

[features]
containers = []

[dependencies]
# pub
once_cell = "1.5"
regex = "1.4"
# private
reformation_derive = {path="../reformation_derive", version="0.5.2"}
derive_more = "0.99"

[dev-dependencies]
criterion = "0.3"
lazy_static = "1.4"

[[bench]]
name = "kirby_user_agent"
harness = false

[[bench]]
name = "generic_overhead"
harness = false
