[package]
name = "reformation_derive"
version = "0.3.1"
authors = ["hukumka <hukumka212@gmail.com>"]
edition = "2018"
description = "reformation derive cratet "

license = "MIT"
repository = "https://github.com/hukumka/reformation"

[lib]
proc-macro = true

[dependencies]
syn = {version="0.15", features = ["full"] }
quote = "0.6"
proc-macro2 = "0.4"
regex = "1.1.0"
lazy_static = "1.2.0"

