[package]
name = "reformation_derive"
version = "0.5.1"
authors = ["hukumka <hukumka212@gmail.com>"]
edition = "2018"
description = "reformation derive crate"

license = "MIT"
repository = "https://github.com/hukumka/reformation"

[lib]
proc-macro = true

[dependencies]
regex = "1.3"
syn = "1.0"
quote = "1.0"
proc-macro2 = "1.0"
lazy_static = "1.4"
